endra litt meir swagger.yaml og div controllers
