# flask-server/swagger_server/models/__init__.py
@@ -1,0 +1,11 @@
+# coding: utf-8
+
+# flake8: noqa
+from __future__ import absolute_import
+# import models into model package
+from swagger_server.models.message import Message
+from swagger_server.models.room import Room
+from swagger_server.models.room_messages import RoomMessages
+from swagger_server.models.room_users import RoomUsers
+from swagger_server.models.user import User
+from swagger_server.models.user_messages import UserMessages
