# server/models/__init__.py
@@ -1,10 +1,0 @@
-# coding: utf-8
-
-# flake8: noqa
-from __future__ import absolute_import
-# import models into model package
-from models.message import Message
-from models.room import Room
-from models.room_messages import RoomMessages
-from models.room_users import RoomUsers
-from models.user import User
